# tkdnn_ros

./: README.md
tkdnn_ros/: CMakeLists.txt  package.xml
tkdnn_ros/cfg/: ros.yaml  yolov4.yaml
tkdnn_ros/include/tkdnn_ros/: tkDNNobjectDetector.hpp
tkdnn_ros/launch/: tkdnn_ros.launch
tkdnn_ros/src/: tkDNNObjectDetector.cpp  tkDNNobjectdetector_node.cpp
tkdnn_ros_msgs/: CMakeLists.txt  package.xml
tkdnn_ros_msgs/action/: CheckForObjects.action
tkdnn_ros_msgs/msg/: BoundingBoxes.msg
